outputs_20260329-005401-549feb91/codegen/production/build_logs/compiler_stderr.log
C:\Users\extanke\AppData\Local\Temp\tdd_build_u8samnti\src\gtm_tom_3_phase_inverter_pwm.c: In function 'interruptGtmAtom':
C:\Users\extanke\AppData\Local\Temp\tdd_build_u8samnti\src\gtm_tom_3_phase_inverter_pwm.c:63:5: error: implicit declaration of function 'IfxPort_togglePin' [-Wimplicit-function-declaration]
   63 |     IfxPort_togglePin(LED);
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_u8samnti\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTomPwm':
C:\Users\extanke\AppData\Local\Temp\tdd_build_u8samnti\src\gtm_tom_3_phase_inverter_pwm.c:99:35: error: 'IfxGtm_Dtm_ClockSource_cmuClock0' undeclared (first use in this function); did you mean 'IfxGtm_Dtm_ClockSource_cmuClk0'?
   99 |     config.dtmClockSource       = IfxGtm_Dtm_ClockSource_cmuClock0;        /* DTM clock */
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                   IfxGtm_Dtm_ClockSource_cmuClk0
C:\Users\extanke\AppData\Local\Temp\tdd_build_u8samnti\src\gtm_tom_3_phase_inverter_pwm.c:99:35: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\extanke\AppData\Local\Temp\tdd_build_u8samnti\src\gtm_tom_3_phase_inverter_pwm.c:194:5: error: implicit declaration of function 'IfxPort_setPinModeOutput' [-Wimplicit-function-declaration]
  194 |     IfxPort_setPinModeOutput(LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
